--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/tutorial-5
+spring.datasource.url=jdbc:postgresql://localhost:5434/tutorial-5
 spring.datasource.username=postgres
-spring.datasource.password=Mario13052002
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
